# MA-CETSP-ml-optimization

./: CMakeLists.txt  CMakeSettings.json  Demir.txt  README.md
cmake/: FindGUROBI.cmake
include/: Algo.hpp  Defs.hpp
include/Features/: GeometryFeatures.hpp
include/Genetic/: List.hpp  Population.hpp
include/ML/: SurvivalModel.hpp
include/Utils/: Data.hpp
ml/dataset/: cox_dataset.csv
ml/models/: cox_model.pkl  gbsa_meta.json  gbsa_model.pkl
ml/scripts/: features.py  loader.py  predict.py  predict_gbsa.py  predict_rsf.py  train_cox.py  train_gbsa.py  train_rsf.py
solutions/bonus1000-1762690600/: bonus1000-1762690600-0.txt  bonus1000-1762690600-1.txt  bonus1000-1762690600-2.txt  bonus1000-1762690600-3.txt  bonus1000-1762690600-4.txt  bonus1000-1762690600-5.txt  bonus1000-1762690600-6.txt  bonus1000-1762690600-7.txt  bonus1000-1762690600-8.txt  bonus1000-1762690600-9.txt
solutions/bonus1000-1762691327/: bonus1000-1762691327-0.txt  bonus1000-1762691327-1.txt  bonus1000-1762691327-2.txt  bonus1000-1762691327-3.txt  bonus1000-1762691327-4.txt  bonus1000-1762691327-5.txt  bonus1000-1762691327-6.txt  bonus1000-1762691327-7.txt  bonus1000-1762691327-8.txt  bonus1000-1762691327-9.txt
solutions/bonus1000-1762691443/: bonus1000-1762691443-0.txt  bonus1000-1762691443-1.txt  bonus1000-1762691443-2.txt  bonus1000-1762691443-3.txt  bonus1000-1762691443-4.txt  bonus1000-1762691443-5.txt  bonus1000-1762691443-6.txt  bonus1000-1762691443-7.txt  bonus1000-1762691443-8.txt  bonus1000-1762691443-9.txt
solutions/bonus1000-1762691904/: bonus1000-1762691904-0.txt  bonus1000-1762691904-1.txt  bonus1000-1762691904-10.txt  bonus1000-1762691904-11.txt  bonus1000-1762691904-12.txt  bonus1000-1762691904-13.txt  bonus1000-1762691904-14.txt  bonus1000-1762691904-15.txt  bonus1000-1762691904-16.txt  bonus1000-1762691904-17.txt  bonus1000-1762691904-18.txt  bonus1000-1762691904-19.txt  bonus1000-1762691904-2.txt  bonus1000-1762691904-20.txt  bonus1000-1762691904-21.txt  bonus1000-1762691904-22.txt  bonus1000-1762691904-23.txt  bonus1000-1762691904-24.txt  bonus1000-1762691904-25.txt  bonus1000-1762691904-26.txt  bonus1000-1762691904-27.txt  bonus1000-1762691904-28.txt  bonus1000-1762691904-29.txt  bonus1000-1762691904-3.txt  bonus1000-1762691904-4.txt  bonus1000-1762691904-5.txt  bonus1000-1762691904-6.txt  bonus1000-1762691904-7.txt  bonus1000-1762691904-8.txt  bonus1000-1762691904-9.txt
solutions/bonus1000-1763909598/: bonus1000-1763909598-1.txt  bonus1000-1763909598-15.txt  bonus1000-1763909598-2.txt  bonus1000-1763909598-30.txt  bonus1000-1763909598-4.txt  bonus1000-1763909598-62.txt  bonus1000-1763909598-63.txt  bonus1000-1763909598-67.txt  bonus1000-1763909598-8.txt
solutions/bonus1000-1763913835/: bonus1000-1763913835-1.txt  bonus1000-1763913835-16.txt  bonus1000-1763913835-2.txt  bonus1000-1763913835-21.txt  bonus1000-1763913835-43.txt  bonus1000-1763913835-52.txt  bonus1000-1763913835-54.txt  bonus1000-1763913835-6.txt  bonus1000-1763913835-65.txt  bonus1000-1763913835-8.txt  bonus1000-1763913835-9.txt  bonus1000-1763913835-98.txt
solutions/bonus1000-1763915014/: bonus1000-1763915014-1.txt  bonus1000-1763915014-17.txt  bonus1000-1763915014-29.txt  bonus1000-1763915014-39.txt  bonus1000-1763915014-4.txt  bonus1000-1763915014-64.txt
solutions/bonus1000-1763921736/: bonus1000-1763921736-1.txt  bonus1000-1763921736-14.txt  bonus1000-1763921736-15.txt  bonus1000-1763921736-18.txt  bonus1000-1763921736-19.txt  bonus1000-1763921736-22.txt  bonus1000-1763921736-24.txt  bonus1000-1763921736-3.txt  bonus1000-1763921736-58.txt  bonus1000-1763921736-63.txt  bonus1000-1763921736-9.txt
solutions/bonus1000-1763922433/: bonus1000-1763922433-1.txt  bonus1000-1763922433-10.txt  bonus1000-1763922433-100.txt  bonus1000-1763922433-14.txt  bonus1000-1763922433-18.txt  bonus1000-1763922433-30.txt  bonus1000-1763922433-4.txt  bonus1000-1763922433-48.txt  bonus1000-1763922433-6.txt  bonus1000-1763922433-62.txt  bonus1000-1763922433-63.txt  bonus1000-1763922433-81.txt  bonus1000-1763922433-9.txt
solutions/bonus1000-1764008231/: bonus1000-1764008231-1.txt  bonus1000-1764008231-13.txt  bonus1000-1764008231-17.txt  bonus1000-1764008231-20.txt  bonus1000-1764008231-21.txt  bonus1000-1764008231-3.txt  bonus1000-1764008231-30.txt  bonus1000-1764008231-31.txt  bonus1000-1764008231-4.txt  bonus1000-1764008231-52.txt  bonus1000-1764008231-54.txt  bonus1000-1764008231-63.txt  bonus1000-1764008231-7.txt  bonus1000-1764008231-70.txt  bonus1000-1764008231-85.txt  bonus1000-1764008231-9.txt
solutions/bonus1000-1764010037/: bonus1000-1764010037-1.txt  bonus1000-1764010037-12.txt  bonus1000-1764010037-14.txt  bonus1000-1764010037-2.txt  bonus1000-1764010037-24.txt  bonus1000-1764010037-39.txt  bonus1000-1764010037-4.txt  bonus1000-1764010037-46.txt  bonus1000-1764010037-53.txt  bonus1000-1764010037-54.txt  bonus1000-1764010037-57.txt  bonus1000-1764010037-7.txt  bonus1000-1764010037-9.txt
solutions/bonus1000-1764010984/: bonus1000-1764010984-1.txt  bonus1000-1764010984-100.txt  bonus1000-1764010984-2.txt  bonus1000-1764010984-21.txt  bonus1000-1764010984-22.txt  bonus1000-1764010984-3.txt  bonus1000-1764010984-31.txt  bonus1000-1764010984-32.txt  bonus1000-1764010984-41.txt  bonus1000-1764010984-5.txt  bonus1000-1764010984-60.txt  bonus1000-1764010984-67.txt  bonus1000-1764010984-71.txt  bonus1000-1764010984-79.txt  bonus1000-1764010984-84.txt
solutions/bonus1000-1764011277/: bonus1000-1764011277-1.txt  bonus1000-1764011277-2.txt  bonus1000-1764011277-26.txt  bonus1000-1764011277-49.txt  bonus1000-1764011277-5.txt  bonus1000-1764011277-68.txt  bonus1000-1764011277-7.txt  bonus1000-1764011277-8.txt  (+2 more)
src/: Algo.cpp
(+1345 files in other folders)
